second half login setup!

--- a/src/app/private/modal/modal.component.html
+++ b/src/app/private/modal/modal.component.html
@@ -1,5 +1,5 @@
 
-<h1 mat-dialog-title>Adicionar Paciente</h1>
+<h1 mat-dialog-title>Adicionar Simulador</h1>
 <div mat-dialog-content>
     <mat-form-field class="simulador-matform">
         <mat-label>Novo simulador</mat-label>
