--- a/src/app/private/simulators/simulators.component.html
+++ b/src/app/private/simulators/simulators.component.html
@@ -11,7 +11,7 @@
                 <img [src]="element.simulatorImgPath" alt="">
             </div>
             <div class="link-container">
-                    <a routerLink="/simuladores/{{element.id}}">Enviar Relatório</a>
+                    <a routerLink="/private/simuladores/{{element.id}}">Enviar Relatório</a>
             </div>
         </div>
     </div>
