--- a/src/app/private/home/home.component.html
+++ b/src/app/private/home/home.component.html
@@ -4,6 +4,9 @@
         <div class="row">
             <div class="col left-col">
                 <div class="left-col-container">
+                    <div class=" container home-msg-container">
+                        <h4 class="welcome-msg">Bem vindo {{appservice.logedUser?.name}} !</h4>
+                    </div>
                     <div class="home-list">
                         <span><img src="assets/imgs/icons/dataset.png" alt="">Funcionalidades</span>
                         <ul>
@@ -21,7 +24,6 @@
                             <p class="app-logo">Linchpin @</p>
                             <p class="app-sub-logo">Cuide da saúde do seu simulador</p>
                         </div>
-                        
                 </div>
             </div>
         </div>
