--- a/src/app/private/home/home.component.scss
+++ b/src/app/private/home/home.component.scss
@@ -14,6 +14,18 @@
                 width: 700px;
                 height: 600px;
                 margin-left: 3em;
+                .home-msg-container{
+                    position: absolute;
+                    //margin-top: 100px;
+                    width: 437px;
+                    margin-top: 100px;
+                    .welcome-msg{
+                        width: 320px;
+                        margin: auto;
+                        color: white;
+                        font-size: 25px;
+                    }
+                }
                 .home-list{
                     position: absolute;
                     margin-top: 14em;
