--- a/src/app/private/simulators/simulator-details/simulator-details.component.html
+++ b/src/app/private/simulators/simulator-details/simulator-details.component.html
@@ -194,7 +194,7 @@
         <div class="gerar-relatorio-btn-container">
             <div class="btns-relatorio">
                 <button mat-raised-button routerLink="/private/simuladores">Voltar</button>
-                <button mat-raised-button color="primary" (click)="onSubmit()">Gerar Relatorio</button>
+                <button mat-raised-button color="primary" class="form-generate-btn" (click)="onSubmit()">Gerar Relatorio</button>
                 
             </div>
         </div>
