--- a/src/app/private/simulators/simulator-details/simulator-details.component.scss
+++ b/src/app/private/simulators/simulator-details/simulator-details.component.scss
@@ -41,5 +41,10 @@
         button{
             margin: 10px;
         }
+        .form-generate-btn{
+            
+                background-color: $homeLeftContainerColor;
+        
+        }
     }
 }
