--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -30,8 +30,7 @@
             <div class="col right-col">
                 <div class="right-col-container">
                         <div class="center-content">
-                            <p class="app-logo">Linchpin @</p>
-                            <p class="app-sub-logo">Cuide da saúde do seu simulador</p>
+                            <img src="../../../assets/imgs/logo/linchPinSlogan.svg" alt="">
                         </div>
                 </div>
             </div>
