--- a/src/app/private/home/home.component.html
+++ b/src/app/private/home/home.component.html
@@ -8,7 +8,10 @@
                         <h4 class="welcome-msg">Bem vindo {{appservice.logedUser?.name}} !</h4>
                     </div>
                     <div class="home-list">
-                        <span><img src="assets/imgs/icons/dataset.png" alt="">Funcionalidades</span>
+                        <div class="list-title">
+                            <img src="assets/imgs/icons/dataset.png" alt="">
+                            <span>Funcionalidades</span> 
+                        </div>
                         <ul>
                             <li><img src="assets/imgs/icons/sunny.png" alt=""><span>Registro de falhas do simulador</span></li>
                             <li><img src="assets/imgs/icons/routine.png" alt=""><span>Produção de relatórios</span></li>
@@ -21,8 +24,7 @@
             <div class="col right-col">
                 <div class="right-col-container">
                         <div class="center-content">
-                            <p class="app-logo">Linchpin @</p>
-                            <p class="app-sub-logo">Cuide da saúde do seu simulador</p>
+                            <img src="../../../assets/imgs/logo/linchpinLogo.svg" alt="">
                         </div>
                 </div>
             </div>
