--- a/src/app/private/simulators/simulators.component.scss
+++ b/src/app/private/simulators/simulators.component.scss
@@ -75,7 +75,7 @@
                 color: white;
             }
             box-shadow: 2px 0px 11px -3px #888888;
-            background-color:$btnsBackgroundColor;
+            background-color:$homeLeftContainerColor;
         }
     }
 }
