--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,7 +2,7 @@ $sidebar-width: 300px;
 $topbar-height: 53px;
 $mybox-shadow:2px 0px 11px -3px #888888;
 $contentHoverBackgroundColr: rgb(206, 202, 202);
-$homeLeftContainerColor: #4485cf;
+$homeLeftContainerColor: #20b4d2;
 $mainContentBackgroundColor:#ebebeb;
 $btnsBackgroundColor: #3F51B5;
 
