--- a/src/app/private/simulators/simulator-details/simulator-details.component.html
+++ b/src/app/private/simulators/simulator-details/simulator-details.component.html
@@ -9,7 +9,7 @@
               </h3>
           </div>
           <div class="col">
-              <ul class="code-list">
+              <ul class="code-list">  
                   <li>
                       <mat-form-field appearance="outline">
                           <mat-label>Escolha uma Data...</mat-label>
@@ -186,9 +186,13 @@
                   </tr>
                 </tbody>
             </table> 
-            
         </div>
-    
+
+        <p>Outros Relatos</p>
+        <mat-form-field class="example-full-width">
+          <mat-label>Relate outras intercorrencias...</mat-label>
+          <textarea matInput></textarea>
+        </mat-form-field>
 
 
         <div class="gerar-relatorio-btn-container">
