--- a/src/app/private/side-panel/side-panel.component.scss
+++ b/src/app/private/side-panel/side-panel.component.scss
@@ -42,6 +42,7 @@
                 &:hover{
                     background-color: $homeLeftContainerColor;
                     border-radius: 4px;
+                    cursor: pointer;
                     a{
                         color: white;
                     }
