--- a/src/app/private/modal/view-simulator-modal/view-simulator-modal.component.html
+++ b/src/app/private/modal/view-simulator-modal/view-simulator-modal.component.html
@@ -13,7 +13,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let element of statusFormData.formNames">
+                  <tr *ngFor="let element of statusFormData.formTableNames">
                     <th>{{element}}</th>
                   </tr>
                 </tbody>
