--- a/src/app/private/side-panel/side-panel.component.html
+++ b/src/app/private/side-panel/side-panel.component.html
@@ -13,7 +13,8 @@
               <li *ngSwitchCase="user"(click)="openSimulatorsHistory()"><img src="assets/imgs/icons/AddSimulator-icon.png" alt=""><a>Histórico</a></li>
               <li *ngSwitchCase="user" routerLink="status"><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Saúde do Simulador </a></li>
               <li *ngSwitchCase="admin" routerLink="status"><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Saúde dos Simuladores </a></li>
-              <li *ngSwitchCase="admin" routerLink="aulas"><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Gestao de Materiais </a></li>
+              <li *ngSwitchCase="admin" routerLink="aulas"><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Preparo de Kits </a></li>
+              <li *ngSwitchCase="user" routerLink="aulas"><img src="assets/imgs/icons/Status-icon.png" alt=""><a>Preparo de Kits </a></li>
               <hr class="horizontal-line">
         </ul>
        
